--- a/portfolio/public/assets/i18n/en.json
+++ b/portfolio/public/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "texto": "text in english",
     "presentation": {
-    "title": "👋 Hi there! I'm Agustina Casarone",
+    "title": "👋 Hi! I'm Agustina Casarone",
     "description": "I am a passionate Full Stack Developer from La Plata, Argentina, specialized in Java, SQL, and Angular. I thrive on crafting innovative and scalable software solutions that make a real impact.",
     "professional_background": "With a solid foundation in backend technologies like Spring Boot, Quarkus, and Sonar, combined with a keen eye for frontend development using Angular and Bootstrap, I bring a comprehensive approach to software development. I excel in pixel-perfect development and beautiful UX/UI designs, ensuring high-quality and efficient results."
   },
