--- a/portfolio/public/assets/i18n/en.json
+++ b/portfolio/public/assets/i18n/en.json
@@ -191,6 +191,17 @@
         "description": "A comprehensive 60+ hour course covering Python 3, web development, data science, automation, and real-world projects. Gained expertise in tools like PyCharm, Jupyter Notebook, and Flask, and built practical applications such as web scrapers and desktop GUIs."
       }
     }
+  },
+  "projects": {
+    "ejam": {
+      "name": "eJam postulation project",
+      "link": "https://ejam-agustina-casarone.netlify.app/",
+      "description": "This was made in 24hs for a Full Stack Developer position at eJam. \n It is a pixel perfect working webpage based on the design I was given.\n I used Angular 18 with Tailwind for the development.",
+      "design": "https://www.figma.com/design/gHf56mhtFr0lXky0poofoQ/ejam---Clarifion-Upsell-%5B-Client-V-%5D-(Copy)?node-id=0-1&t=ErPOr9kcDMPXakqX-0",
+      "repository": "https://github.com/AgusCasarone/eJam-challenge",
+      "date": "Jun 2024",
+      "image": "assets/images/projects/ejam.png"
+    }
   }
 }
 
